# CSV-SQL-Streaming-Loader

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  START-HERE.md  TESTING.md  WINDOWS-POSTGRESQL.md  WINDOWS-TESTING-GUIDE.md  quick-test.sh  run-test-simple.sh  setup-local-db.sh  test-local.sh  test-windows-pg.sh
examples/: sample.csv
scripts/: run-test.ps1  run-test.sh  setup-docker.ps1  setup-docker.sh
src/: errors.rs  main.rs  parser.rs  progress.rs  schema.rs  types.rs
src/db/: batch.rs  connection.rs  copy.rs  mod.rs
