[package]
name = "csv-sql-loader"
version = "0.1.0"
edition = "2021"
authors = ["CSV-SQL Loader Contributors"]
description = "High-performance Rust CLI for streaming CSV data into PostgreSQL"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AbubakarMahmood1/CSV-SQL-Streaming-Loader"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }

# CSV parsing
csv = "1.3"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures-util = "0.3"
bytes = "1.10"

# PostgreSQL
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }

# Progress bars
indicatif = "0.17"

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date/time handling
chrono = "0.4"

[dev-dependencies]
# Property testing
proptest = "1.4"

# Benchmarking
criterion = "0.5"

# Test helpers
tempfile = "3.8"
